--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,13 @@
-:root {
+body{
+  background: #242424;
   font-family: Inter, sans-serif;
-  background-color: #242424;
 }
+
+.resize{
+  height: 90vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #dadada;
+}
+
