--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,3 +2,12 @@
   font-family: Inter, sans-serif;
   background-color: #242424;
 }
+
+.resize{
+  height: 90vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #dadada;
+}
+
