--- a/src/components/passwordOutput/passwordOutput.component.scss
+++ b/src/components/passwordOutput/passwordOutput.component.scss
@@ -5,8 +5,27 @@
   border-radius: 15px;
   display: flex;
   align-items: center;
+  position: relative;
+  overflow: hidden;
 
-  &__text{
+  .pass-strength {
+    width: 100%;
+    height: 15%;
+    position: absolute;
+    bottom: 0;
+
+    &.strong{
+      background: green;
+    }
+    &.moderate{
+      background: blue;
+    }
+    &.week{
+      background: red;
+    }
+  }
+
+  &__text {
     margin: 1em;
     font-family: Inter, sans-serif;
     font-size: 1.2em;
