--- a/src/components/passwordOutput/passwordOutput.component.scss
+++ b/src/components/passwordOutput/passwordOutput.component.scss
@@ -7,6 +7,7 @@
   align-items: center;
   position: relative;
   overflow: hidden;
+  box-shadow: 0 0 10px 3px rgba(0, 0, 0, 0.6);
 
   .pass-strength {
     width: 100%;
