--- a/src/components/options/Options.component.scss
+++ b/src/components/options/Options.component.scss
@@ -7,26 +7,28 @@
   box-shadow: 0 0 10px 3px rgba(0, 0, 0, 0.6);
 }
 
-.length-container{
-  margin: 1em 2em 1em 2em;
+.length-container {
+  margin: 1em 3em 1em 3em;
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  .length-display{
+  .length-display {
     display: flex;
     align-items: center;
+    font-size: 1.2em;
+    font-weight: bold;
 
-    &__value{
+    &__value {
       background: white;
-      padding: 0.2em;
+      padding: 0.3em;
       border-radius: 5px;
       margin-left: 0.6em;
       box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.6);
     }
   }
 
-  &__length-selector{
-    width: 60%;
+  &__length-selector {
+    width: 50%;
   }
 }
