--- a/src/components/options/Options.component.scss
+++ b/src/components/options/Options.component.scss
@@ -20,7 +20,10 @@
     font-weight: bold;
 
     &__value {
+      text-align: center;
       background: white;
+      width: 1.2em;
+      height: 1.2em;
       padding: 0.3em;
       border-radius: 5px;
       margin-left: 0.6em;
