Feature/Length Selector (#11)
* Options component created

* Lenght Slider added

* Lenght Slider working

* Limit between 10 and 50

* Limit between 10 and 50

* Text now centered

--- a/src/components/passwordOutput/passwordOutput.component.scss
+++ b/src/components/passwordOutput/passwordOutput.component.scss
@@ -7,6 +7,7 @@
   align-items: center;
   position: relative;
   overflow: hidden;
+  box-shadow: 0 0 10px 3px rgba(0, 0, 0, 0.6);
 
   .pass-strength {
     width: 100%;
@@ -14,21 +15,20 @@
     position: absolute;
     bottom: 0;
 
-    &.strong{
+    &.strong {
       background: green;
     }
-    &.moderate{
+    &.moderate {
       background: blue;
     }
-    &.week{
+    &.week {
       background: red;
     }
   }
 
   &__text {
     margin: 1em;
-    font-family: Inter, sans-serif;
-    font-size: 1.2em;
+    font-size: 1.3em;
     font-weight: bold;
   }
 }
