Author footer added

--- a/src/components/App/App.component.scss
+++ b/src/components/App/App.component.scss
@@ -5,3 +5,17 @@
   align-items: center;
   flex-direction: column;
 }
+
+.author{
+  display: flex;
+  justify-content: center;
+  color: white;
+  a{
+    margin-right: 3px;
+    margin-left: 3px;
+    color: white;
+    &:hover{
+      color: indianred;
+    }
+  }
+}
