--- a/src/components/passwordOutput/passwordOutput.component.scss
+++ b/src/components/passwordOutput/passwordOutput.component.scss
@@ -1,7 +1,7 @@
 .pass-output {
   background: white;
   width: 50%;
-  height: 9%;
+  height: 10%;
   border-radius: 15px;
   display: flex;
   align-items: center;
@@ -11,7 +11,7 @@
 
   .pass-strength {
     width: 100%;
-    height: 15%;
+    height: 13%;
     position: absolute;
     bottom: 0;
 
@@ -30,5 +30,8 @@
     margin: 1em;
     font-size: 1.3em;
     font-weight: bold;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: "...";
   }
 }
