Bootstrap Icons added (#9)

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,14 @@
+@import "~bootstrap-icons/font/bootstrap-icons.css";
+
 :root {
   font-family: "Raleway", sans-serif;
   background-color: #242424;
 }
+
+.resize {
+  height: 90vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
