Feature/text output buttons (#13)
* test output Buttons added

* Copy to clipboard working

* Refresh password working

--- a/src/components/passwordOutput/passwordOutput.component.scss
+++ b/src/components/passwordOutput/passwordOutput.component.scss
@@ -8,6 +8,7 @@
   position: relative;
   overflow: hidden;
   box-shadow: 0 0 10px 3px rgba(0, 0, 0, 0.6);
+  justify-content: space-between;
 
   .pass-strength {
     width: 100%;
@@ -33,5 +34,25 @@
     overflow: hidden;
     white-space: nowrap;
     text-overflow: "...";
+  }
+
+  &__buttons {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-right: 0.5em;
+    margin-left: 0.1em;
+    margin-bottom: 0.2em;
+    button {
+      font-size: 1.5em;
+      margin: 0.1em;
+      border: none;
+      background: none;
+
+      &:hover {
+        cursor: pointer;
+        color: darkgreen;
+      }
+    }
   }
 }
