--- a/src/components/options/Options.component.scss
+++ b/src/components/options/Options.component.scss
@@ -5,33 +5,55 @@
   width: 45%;
   display: flex;
   box-shadow: 0 0 10px 3px rgba(0, 0, 0, 0.6);
-}
+  flex-direction: column;
 
-.length-container {
-  margin: 1em 3em 1em 3em;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-  .length-display {
+  .length-container {
+    margin: 1em 6% 1em 6%;
     display: flex;
     align-items: center;
-    font-size: 1.2em;
-    font-weight: bold;
+    justify-content: space-between;
+    .length-display {
+      display: flex;
+      align-items: center;
+      font-size: 1.2em;
+      font-weight: bold;
 
-    &__value {
-      text-align: center;
-      background: white;
-      width: 1.2em;
-      height: 1.2em;
-      padding: 0.3em;
-      border-radius: 5px;
-      margin-left: 0.6em;
-      box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.6);
+      &__value {
+        text-align: center;
+        background: white;
+        width: 1.2em;
+        height: 1.2em;
+        padding: 0.3em;
+        border-radius: 5px;
+        margin-left: 0.6em;
+        margin-right: 0.6em;
+        box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.6);
+      }
+    }
+
+    &__length-selector {
+      width: 50%;
     }
   }
 
-  &__length-selector {
-    width: 50%;
+  .usage-container {
+    display: flex;
+    flex-direction: column;
+    margin: 1em 6% 1em 6%;
+    font-size: 1.2em;
+    font-weight: bold;
+
+    &__buttons {
+      display: flex;
+      justify-content: space-around;
+      margin-top: 1em;
+      div{
+        display: flex;
+        align-items: center;
+        input{
+          margin-left: 0.5em;
+        }
+      }
+    }
   }
 }
