--- a/src/components/options/Options.component.scss
+++ b/src/components/options/Options.component.scss
@@ -47,12 +47,12 @@
       display: flex;
       justify-content: space-between;
       margin-top: 1em;
-      div{
+      div {
         font-size: 1em;
         display: flex;
         align-items: center;
         font-weight: bolder;
-        input[type=checkbox]{
+        input[type="checkbox"] {
           margin-left: 0.5em;
           accent-color: royalblue;
           border-radius: 20px;
