--- a/src/components/CheckBox/CheckBox.component.scss
+++ b/src/components/CheckBox/CheckBox.component.scss
@@ -1,4 +1,4 @@
-.checkBox{
+.checkBox {
   background: white;
   width: 20px;
   height: 20px;
@@ -8,11 +8,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  i{
+  padding-top: 0.05em;
+  i {
     font-size: 1.5em;
   }
 
-  &:hover{
+  &:hover {
     cursor: pointer;
   }
 }
