Color now changing with strength

--- a/src/components/passwordOutput/passwordOutput.component.scss
+++ b/src/components/passwordOutput/passwordOutput.component.scss
@@ -15,15 +15,16 @@
     height: 13%;
     position: absolute;
     bottom: 0;
+    transition: background-color 400ms linear;
 
     &.strong {
       background: green;
     }
     &.moderate {
-      background: blue;
+      background: #29298c;
     }
-    &.week {
-      background: red;
+    &.weak {
+      background: #8a3030;
     }
   }
 
